deploy: c06a8f81e73bc6266b5b3d8650d8a6b75db150c2

--- a/affinity.html
+++ b/affinity.html
@@ -14,23 +14,23 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-Ckpg_-Yy.js"></script>
+    <script type="module" crossorigin src="./assets/affinity-CnhWB2PS.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
     <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
   </head>
   <body>
     <div id="app">
-      <h1>Hifumi Keyboard</h1>
+      <h1>Affinity Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
+        音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しめるテンキーです。
       </p>
       <p>
-        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
+        ファームウェア内で FFT していた KP-19 に対して、こちらは専用の IC を別途搭載して品質を向上しています。ノイズ対策が課題として残りました。
       </p>
       <p>
-        Influenced by: Meishi
+        Influenced by: KP-19
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
