--- a/disco9.html
+++ b/disco9.html
@@ -14,23 +14,23 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-Ckpg_-Yy.js"></script>
+    <script type="module" crossorigin src="./assets/disco9-DkzvhjRI.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
     <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
   </head>
   <body>
     <div id="app">
-      <h1>Hifumi Keyboard</h1>
+      <h1>disco9 Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
+        大量に LED を付けることができ、透明キーキャップと併わせてすごい光り方をするマクロパッドです。自作キーボードクラブイベント「Keysounds!!!」の第一回に合わせて作りました。
       </p>
       <p>
-        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
+        ALPS スイッチにも対応しており、実は「（LED 穴のない）ALPS スイッチを光らせる実験」も兼ねていました。また、秋月ジョイスティックを実装することができ、ジョイスティック付きキーボードの検討にも使いました。
       </p>
       <p>
-        Influenced by: Meishi
+        Influenced by: -
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
