--- a/kp-19.html
+++ b/kp-19.html
@@ -14,23 +14,25 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-Ckpg_-Yy.js"></script>
+    <script type="module" crossorigin src="./assets/kp-19-B1Z0j3sl.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
   </head>
   <body>
     <div id="app">
-      <h1>Hifumi Keyboard</h1>
+      <h1>KP-19</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
+        第一回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
-        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
+        ファームウェアに簡易的な FFT を内蔵しており、音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しむことができます。このアイデアはのちの Affinity に引き継がれました。
       </p>
       <p>
-        Influenced by: Meishi
+        触覚フィードバック検討のためのモーター出力端子、 SK6812Side LED の採用など、他にも実験的な要素を多く含んでいます。
+      </p>
+      <p>
+        Influenced by: Plaid
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
