--- a/wym16.html
+++ b/wym16.html
@@ -14,8 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-BkXlKvu8.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
+    <script type="module" crossorigin src="./assets/wym16-DTwo8Nbj.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
   </head>
   <body>
     <div id="app">
