--- a/gemini.html
+++ b/gemini.html
@@ -14,8 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DUlK0yY5.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-UP8sB14Z.js">
+    <script type="module" crossorigin src="./assets/gemini-C7TW5NkW.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
   </head>
   <body>
     <div id="app">
