deploy: 9deaa7df026a6c64ba55d495638ecfe623b9b24b

--- a/kastor2.html
+++ b/kastor2.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor2-CWIPRCOI.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
+    <script type="module" crossorigin src="./assets/kastor2-Cl1BWeGn.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
   </head>
   <body>
     <div id="app">
