--- a/kp-19.html
+++ b/kp-19.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-B1Z0j3sl.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
+    <script type="module" crossorigin src="./assets/kp-19-BaNBdyb_.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
   </head>
   <body>
     <div id="app">
