--- a/switch42.html
+++ b/switch42.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-3s2VnyqH.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-QX6YdCOs.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DC9iu0Im.js">
+    <script type="module" crossorigin src="./assets/switch42-DbkiJLs9.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
   </head>
   <body>
     <div id="app">
