Add checkbox to toggle backlights

--- a/gemini.html
+++ b/gemini.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
+      <p>
         自分の中で「自作キーボード活動の終着点」になっている分割キーボードです。
       </p>
       <p>
