--- a/hifumi.html
+++ b/hifumi.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
+      <p>
         実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
       </p>
       <p>
