--- a/disco9.html
+++ b/disco9.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
+      <p>
         大量に LED を付けることができ、透明キーキャップと併わせてすごい光り方をするマクロパッドです。自作キーボードクラブイベント「Keysounds!!!」の第一回に合わせて作りました。
       </p>
       <p>
