--- a/kp-19.html
+++ b/kp-19.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
+      <p>
         第一回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
