--- a/switch42.html
+++ b/switch42.html
@@ -21,6 +21,12 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
+      <p>
         初めて自分で設計した分割キーボードです。
       </p>
       <p>
