deploy: ffc678aacfece0d72d81b37825bd2a7471871359

--- a/gemini.html
+++ b/gemini.html
@@ -14,15 +14,20 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-CyXOmplg.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
+    <script type="module" crossorigin src="./assets/gemini-BKN11fCz.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
   </head>
   <body>
     <div id="app">
       <h1>Gemini Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
+      <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
       <p>
         自分の中で「自作キーボード活動の終着点」になっている分割キーボードです。
       </p>
