--- a/hifumi.html
+++ b/hifumi.html
@@ -14,15 +14,20 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-BzCjkn0G.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
+    <script type="module" crossorigin src="./assets/hifumi-Bg9iisyQ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
   </head>
   <body>
     <div id="app">
       <h1>Hifumi Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
+      <p>
+        <label>
+          <input type="checkbox" id="led" />
+          LED ON
+        </label>
+      </p>
       <p>
         実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
       </p>
