--- a/kastor.html
+++ b/kastor.html
@@ -14,9 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-ChMM5cc1.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
+    <script type="module" crossorigin src="./assets/kastor-CIN7wcyZ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
   </head>
   <body>
     <div id="app">
