--- a/wym16.html
+++ b/wym16.html
@@ -14,9 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-D2yfaddH.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CD_dNCYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-CIDxuR2A.js">
+    <script type="module" crossorigin src="./assets/wym16-B9joB4UK.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
   </head>
   <body>
     <div id="app">
