deploy: 9deaa7df026a6c64ba55d495638ecfe623b9b24b

--- a/disco9.html
+++ b/disco9.html
@@ -14,20 +14,15 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/disco9-DhI0DM0e.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/disco9-B6jvR7_-.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
   </head>
   <body>
     <div id="app">
       <h1>disco9 Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <p>
-        <label>
-          <input type="checkbox" id="led" />
-          LED ON
-        </label>
-      </p>
       <p>
         大量に LED を付けることができ、透明キーキャップと併わせてすごい光り方をするマクロパッドです。自作キーボードクラブイベント「Keysounds!!!」の第一回に合わせて作りました。
       </p>
