--- a/kastor.html
+++ b/kastor.html
@@ -14,8 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-CIN7wcyZ.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/kastor-GNq9TYWP.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
   </head>
   <body>
     <div id="app">
