--- a/affinity.html
+++ b/affinity.html
@@ -14,20 +14,15 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-D-7kKIDl.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/affinity-BvkrEp_4.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
   </head>
   <body>
     <div id="app">
       <h1>Affinity Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <p>
-        <label>
-          <input type="checkbox" id="led" />
-          LED ON
-        </label>
-      </p>
       <p>
         音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しめるテンキーです。
       </p>
