--- a/kp-19.html
+++ b/kp-19.html
@@ -14,20 +14,14 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-ppoj-04B.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/kp-19-ZDmyc4qJ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
   </head>
   <body>
     <div id="app">
       <h1>KP-19</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <p>
-        <label>
-          <input type="checkbox" id="led" />
-          LED ON
-        </label>
-      </p>
       <p>
         第一回 Meishi 展に出した名刺サイズ基板です。
       </p>
