--- a/morpho.html
+++ b/morpho.html
@@ -14,8 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-Dpe3YqKi.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/morpho-D2ZMSDU4.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
   </head>
   <body>
     <div id="app">
