--- a/switch42.html
+++ b/switch42.html
@@ -14,20 +14,15 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-CSwZF8dO.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DA399Kna.js">
+    <script type="module" crossorigin src="./assets/switch42-D3oYd81C.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
   </head>
   <body>
     <div id="app">
       <h1>Switch42 Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
-      <p>
-        <label>
-          <input type="checkbox" id="led" />
-          LED ON
-        </label>
-      </p>
       <p>
         初めて自分で設計した分割キーボードです。
       </p>
