--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ canvas {
       <h2>分割 40%</h2>
       <ul>
         <li><a href="./gemini.html">Gemini Keyboard</a></li>
+        <li><a href="./pollux.html">Pollux Keyboard</a></li>
         <li><a href="./switch42.html">Switch42 Keyboard</a></li>
       </ul>
       <h2>分割 30%</h2>
