--- a/kastor.html
+++ b/kastor.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-GNq9TYWP.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BMty9JOs.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Bequ7Ydh.js">
+    <script type="module" crossorigin src="./assets/kastor-DZLNf6iS.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CvFNHRzq.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-B0xsleYE.js">
   </head>
   <body>
     <div id="app">
