deploy: b2c5c66942f94995c85863ea76deb187b46c7efc

--- a/pollux.html
+++ b/pollux.html
@@ -14,23 +14,22 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-C9k8p6vi.js"></script>
+    <script type="module" crossorigin src="./assets/pollux-CPNenJ07.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-CsPM0wlL.js">
     <link rel="modulepreload" crossorigin href="./assets/helper-Cmyf8Td0.js">
   </head>
   <body>
     <div id="app">
-      <h1>Hifumi Keyboard</h1>
+      <h1>Pollux Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
+        自分で設計した２代目の分割キーボードです。
       </p>
       <p>
-        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
-      </p>
+        一般的なキーボードの Row-staggered レイアウトを踏襲しつつ、両手に配置された「Y」「B」キーや、ミニマルかつエルゴノミックな親指キーの配置、狭ピッチ化など、自作キーボードらしさを併わせ持つデザインになっています。
       <p>
-        Influenced by: Meishi
+        Influenced by: -
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
