--- a/wym16.html
+++ b/wym16.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-Cvw3H6NP.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CvFNHRzq.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-B0xsleYE.js">
+    <script type="module" crossorigin src="./assets/wym16-G_hRagnT.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CsPM0wlL.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Cmyf8Td0.js">
   </head>
   <body>
     <div id="app">
