--- a/gemini.html
+++ b/gemini.html
@@ -33,7 +33,7 @@
         打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
       </p>
       <p>
-        Influenced by: Answer40, Claw44, Corne, TGR Alice, SAKANA (not おさかな)
+        Influenced by: Answer40, Claw44, Corne, TGR Alice, Pollux, Switch42, SAKANA (not おさかな)
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
