--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ canvas {
         <li><a href="./wym16.html">Wym16 Keyboard</a></li>
         <li><a href="./morpho.html">Morpho Keyboard</a></li>
         <li><a href="./disco9.html">disco9 Keyboard</a></li>
+        <li><a href="./ddm9.html">DDM9</a></li>
         <li><a href="./kp-19.html">KP-19</a></li>
       </ul>
       <p>
