deploy: 2d166dc0f5582cd1b2a797ed37320fece98894da

--- a/ddm9.html
+++ b/ddm9.html
@@ -14,23 +14,27 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-Bne9XVll.js"></script>
+    <script type="module" crossorigin src="./assets/ddm9-RnbTo0zp.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
     <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
     <div id="app">
-      <h1>Switch42 Keyboard</h1>
+      <h1>DDM9</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        初めて自分で設計した分割キーボードです。
+        第二回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
-        MiniAxe のミニマルな外観を参照しつつ、ハンダ付けの容易な部品だけで組み立てられる、親指クラスタが少し離れている、LED が搭載可能、などの特徴を持ちます。
+        実験要素モリモリだった前回の KP-19 とはうってかわって、実際に名刺（兼、自作キーボードの布教）として人に渡すことも想定した、大人しいデザインになっています。
       </p>
       <p>
-        Influenced by: MiniAxe, Corne, Ergo42
+        ちょっとした謎解きが仕込んであるので、よかったら探してみてください。
+      </p>
+      <p>
+        Influenced by: -
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
