--- a/gemini.html
+++ b/gemini.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DCndv6Vk.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CsPM0wlL.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cmyf8Td0.js">
+    <script type="module" crossorigin src="./assets/gemini--M0smvvl.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
   </head>
   <body>
     <div id="app">
@@ -36,7 +36,7 @@
         打鍵感の面でも、ケース内部の空間を限界まで減らす独自設計の積層ケースを採用し、当時としては気合いの入った設計になっていました。
       </p>
       <p>
-        Influenced by: Answer40, Claw44, Corne, TGR Alice, SAKANA (not おさかな)
+        Influenced by: Answer40, Claw44, Corne, TGR Alice, Pollux, Switch42, SAKANA (not おさかな)
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
