--- a/morpho.html
+++ b/morpho.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-C4x2Eroe.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CsPM0wlL.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cmyf8Td0.js">
+    <script type="module" crossorigin src="./assets/morpho-DJosw7li.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
   </head>
   <body>
     <div id="app">
