--- a/pollux.html
+++ b/pollux.html
@@ -14,9 +14,10 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/pollux-CPNenJ07.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CsPM0wlL.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cmyf8Td0.js">
+    <script type="module" crossorigin src="./assets/pollux-CL-J662-.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
     <div id="app">
