Add equilibrium, composition

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ canvas {
         自作キーボードたちを 3D プレビューできるページのプロトタイプ。
         過去の作品たちのアーカイブ化に向けて。
       </p>
+      <h2>一体型 40%</h2>
+      <ul>
+        <li><a href="./composition.html">Composition Keyboard</a></li>
+        <li><a href="./equilibrium.html">Equilibrium Keyboard</a></li>
+      </ul>
       <h2>分割 40%</h2>
       <ul>
         <li><a href="./gemini.html">Gemini Keyboard</a></li>
