deploy: 0aadfb93c921d926c7ee6318411d81e79a3f66fa

--- a/composition.html
+++ b/composition.html
@@ -14,26 +14,26 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-BlIbMFs7.js"></script>
+    <script type="module" crossorigin src="./assets/composition-BeNWwUlr.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
     <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
   </head>
   <body>
     <div id="app">
-      <h1>Kastor Keyboard</h1>
+      <h1>Composition Keyboard</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        Kastor II の元になったプロトタイプで、「親指派のための 30% レイアウト」を模索していた頃の作品です。
+        強めにつけた丸みが特徴的な、薄くて可愛い 40% キーボードです。
       </p>
       <p>
-        あえて四角形にこだわらないことで生まれた、無骨で変態的なビジュアルは今でも結構気に入っています。
+        Equilibrium から引き続き透明感をデザインのテーマにしつつ、ChocV2 を採用することで薄さを強調しています。またベゼルを少し広めに取り、強めに丸みをつけることで可愛さを演出しています。
       </p>
       <p>
-        実用面でも、２行目が左右に張り出していることで「小指 Ctrl」を死守し、ショートカットキーがそのまま使えるようになっていたり、１行目の中央にカッコなどの記号キーを追加配置できるようになっていたりします。
+        打鍵感の面でも、Gemini や Equilibrium から引き続き空洞の少ない独自設計のアクリル積層ケースを採用しており、見た目のわりにしっかり感があります。
       </p>
       <p>
-        Influenced by: Answer40, ことのはシリーズ
+        Influenced by: Equilibrium, Keeblade, SAKANA (not おさかな)
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
