--- a/ddm9.html
+++ b/ddm9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/ddm9-RnbTo0zp.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <script type="module" crossorigin src="./assets/ddm9-WpZ6-Rtf.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
