--- a/kp-19.html
+++ b/kp-19.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-52GnpDJT.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
+    <script type="module" crossorigin src="./assets/kp-19-BSro6W1_.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
   </head>
   <body>
     <div id="app">
