--- a/hifumi.html
+++ b/hifumi.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-D0_iOINY.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <script type="module" crossorigin src="./assets/hifumi-CS7b1R6l.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
   </head>
   <body>
     <div id="app">
