--- a/pollux.html
+++ b/pollux.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/pollux-CL-J662-.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <script type="module" crossorigin src="./assets/pollux-DdvrvBPs.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
