--- a/wym16.html
+++ b/wym16.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/wym16-B8nAt0za.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DOto-yBf.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-Cwgx93_1.js">
+    <script type="module" crossorigin src="./assets/wym16-DvT5Xw5X.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
   </head>
   <body>
     <div id="app">
