--- a/affinity.html
+++ b/affinity.html
@@ -27,7 +27,7 @@
         ファームウェア内で FFT していた KP-19 に対して、こちらは専用の IC を別途搭載して品質を向上しています。ノイズ対策が課題として残りました。
       </p>
       <p>
-        Influenced by: KP-19
+        Influenced by: KP-19, Plaid
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
