--- a/ddm9.html
+++ b/ddm9.html
@@ -30,7 +30,7 @@
         ちょっとした謎解きが仕込んであるので、よかったら探してみてください。
       </p>
       <p>
-        Influenced by: -
+        Influenced by: Meishi
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
