--- a/kp-19.html
+++ b/kp-19.html
@@ -30,7 +30,7 @@
         触覚フィードバック検討のためのモーター出力端子、 SK6812Side LED の採用など、他にも実験的な要素を多く含んでいます。
       </p>
       <p>
-        Influenced by: Plaid
+        Influenced by: Meishi, Plaid
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
