--- a/kp-19.html
+++ b/kp-19.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-BSro6W1_.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
+    <script type="module" crossorigin src="./assets/kp-19-B_prG9xP.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
   </head>
   <body>
     <div id="app">
@@ -32,7 +32,7 @@
         触覚フィードバック検討のためのモーター出力端子、 SK6812Side LED の採用など、他にも実験的な要素を多く含んでいます。
       </p>
       <p>
-        Influenced by: Plaid
+        Influenced by: Meishi, Plaid
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
