--- a/pollux.html
+++ b/pollux.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/pollux-DdvrvBPs.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
+    <script type="module" crossorigin src="./assets/pollux-BnoK6L2w.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
