--- a/affinity.html
+++ b/affinity.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-DtuAKwu1.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
+    <script type="module" crossorigin src="./assets/affinity-BH8AansB.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
@@ -31,7 +31,7 @@
         ファームウェア内で FFT していた KP-19 に対して、こちらは専用の IC を別途搭載して品質を向上しています。ノイズ対策が課題として残りました。
       </p>
       <p>
-        Influenced by: KP-19
+        Influenced by: KP-19, Plaid
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
