--- a/ddm9.html
+++ b/ddm9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/ddm9-WpZ6-Rtf.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-CTGNIiYB.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-C-0aEjpe.js">
+    <script type="module" crossorigin src="./assets/ddm9-CNdUrOq4.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
@@ -34,7 +34,7 @@
         ちょっとした謎解きが仕込んであるので、よかったら探してみてください。
       </p>
       <p>
-        Influenced by: -
+        Influenced by: Meishi
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
