--- a/ddm9.html
+++ b/ddm9.html
@@ -24,7 +24,7 @@
         第二回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
-        実験要素モリモリだった前回の KP-19 とはうってかわって、実際に名刺（兼、自作キーボードの布教）として人に渡すことも想定した、大人しいデザインになっています。
+        実験要素モリモリだった前回の KP-19 とはうってかわって、実際に名刺（兼、自作キーボードの布教）として人に渡すことも想定した、大人しいデザインになっています。狭ピッチにすれば 3x3 を名刺サイズに収められることに気づいて設計しました。
       </p>
       <p>
         ちょっとした謎解きが仕込んであるので、よかったら探してみてください。
