--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ canvas {
   </head>
   <body>
     <div id="app">
-      <h1>自キ 3D 表示デモ</h1>
+      <h1>自キアーカイブのデモ</h1>
       <p>
-        過去の作品たちのアーカイブ化に向けて。
+        過去の作品たちのアーカイブ化に向けて 3D の勉強など。
       </p>
       <p>
-        全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいなと思っています。
+        全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいな〜と思っています。
       </p>
       <h2>一体型 40%</h2>
       <ul>
