--- a/disco9.html
+++ b/disco9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/disco9-DnA-0Q1Z.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
+    <script type="module" crossorigin src="./assets/disco9-BEX2H6KF.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
   </head>
   <body>
     <div id="app">
@@ -24,7 +24,7 @@
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        大量に LED を付けることができ、透明キーキャップと併わせてすごい光り方をするマクロパッドです。自作キーボードクラブイベント「Keysounds!!!」の第二回に合わせて作りました。
+        大量の LED を付けることができ、透明キーキャップと併わせてすごい光り方をするマクロパッドです。自作キーボードクラブイベント「Keysounds!!!」の第二回に合わせて作りました。
       </p>
       <p>
         ALPS スイッチにも対応しており、実は「（LED 穴のない）ALPS スイッチを光らせる実験」も兼ねていました。また、秋月ジョイスティックを実装することができ、ジョイスティック付きキーボードの検討にも使いました。
