--- a/gemini.html
+++ b/gemini.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-DzIokGdr.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
+    <script type="module" crossorigin src="./assets/gemini-CuvStdaZ.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
   </head>
   <body>
     <div id="app">
