--- a/iso-enter.html
+++ b/iso-enter.html
@@ -14,23 +14,19 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-DRFXX80j.js"></script>
+    <script type="module" crossorigin src="./assets/iso-enter-D8vFT8DH.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
   </head>
   <body>
     <div id="app">
-      <h1>Hifumi Keyboard</h1>
+      <h1>1u ISO-Enter Keycap</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        実際に作りながら自作キーボードを学べる入門書「<a href="https://riconken.bitbucket.io/hifumi/" target="_blank">ここから始める自作キーボード</a>」の教材として設計したマクロパッドです。
+        ISO-Enter が封入されているネタキーキャップです。
       </p>
       <p>
-        当時の自作キーボードで一般的に使われていた技術を一通り網羅できるように設計されています。
-      </p>
-      <p>
-        Influenced by: Meishi
+        Influenced by: -
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
