--- a/nutshells.html
+++ b/nutshells.html
@@ -14,24 +14,22 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-DBjx5xa9.js"></script>
+    <script type="module" crossorigin src="./assets/nutshells-BzzvPOjK.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
-    <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
     <div id="app">
-      <h1>Affinity Keyboard</h1>
+      <h1>Self-Made Keyboards in Nutshells</h1>
       <div id="status"></div>
       <canvas id="preview" width="1080px" height="540px"></canvas>
       <p>
-        音楽プレーヤーなどを接続することで、音楽に合わせた LED イルミネーションを楽しめるテンキーです。
+        過去に組み立ててきたキーボードたちへのリスペクトを込めたキーキャップです。
       </p>
       <p>
-        ファームウェア内で FFT していた KP-19 に対して、こちらは専用の IC を別途搭載して品質を向上しています。ノイズ対策が課題として残りました。
+        日本の自作キーボード黎明期の名作４つが、それぞれ 1u キーキャップという "nutshell" に収まっています（というダジャレです）。スイッチやキーキャップのカラーも、当時人気だった実在のパーツをモチーフにしています。
       </p>
       <p>
-        Influenced by: KP-19, Plaid
+        Influenced by: Helix, Ergo42, Corne, Claw44
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
