--- a/ddm9.html
+++ b/ddm9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/ddm9-CNdUrOq4.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DAQZk-A0.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-J40a1TUN.js">
+    <script type="module" crossorigin src="./assets/ddm9-VqEirWf2.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
@@ -28,7 +28,7 @@
         第二回 Meishi 展に出した名刺サイズ基板です。
       </p>
       <p>
-        実験要素モリモリだった前回の KP-19 とはうってかわって、実際に名刺（兼、自作キーボードの布教）として人に渡すことも想定した、大人しいデザインになっています。
+        実験要素モリモリだった前回の KP-19 とはうってかわって、実際に名刺（兼、自作キーボードの布教）として人に渡すことも想定した、大人しいデザインになっています。狭ピッチにすれば 3x3 を名刺サイズに収められることに気づいて設計しました。
       </p>
       <p>
         ちょっとした謎解きが仕込んであるので、よかったら探してみてください。
