--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ canvas {
   </head>
   <body>
     <div id="app">
-      <h1>自キ 3D 表示デモ</h1>
+      <h1>自キアーカイブのデモ</h1>
       <p>
-        過去の作品たちのアーカイブ化に向けて。
+        過去の作品たちのアーカイブ化に向けて 3D の勉強など。
       </p>
       <p>
-        全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいなと思っています。
+        全て販売は終了していますが、将来的に、設計データや発注のチュートリアルを整備して、いつでも誰でも組み立てられるようにしたいな〜と思っています。
       </p>
       <h2>一体型 40%</h2>
       <ul>
@@ -52,6 +52,16 @@ canvas {
         <li><a href="./disco9.html">disco9 Keyboard</a></li>
         <li><a href="./ddm9.html">DDM9</a></li>
         <li><a href="./kp-19.html">KP-19</a></li>
+      </ul>
+      <h2>キーキャップ</h2>
+      <ul>
+        <li><a href="./iso-enter.html">1u ISO-Enter Keycap</a></li>
+        <li><a href="./nutshells.html">Self-Made Keyboards in Nutshells</a></li>
+        <li><a href="./3dkeycaps.html">"3D" Keycap set</a></li>
+      </ul>
+      <h2>ファームウェア</h2>
+      <ul>
+        <li>多重スクロールを実現するカスタム OLED ドライバ</li>
       </ul>
     </div>
   </body>
