deploy: a2ec4bed8d5b389e139d8a94c16e605d8d049021

--- a/affinity.html
+++ b/affinity.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-DBjx5xa9.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
+    <script type="module" crossorigin src="./assets/affinity-C9HXj7xW.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
