--- a/kastor.html
+++ b/kastor.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-CiG54-_P.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-D4X36hdS.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-2T5uKqAo.js">
+    <script type="module" crossorigin src="./assets/kastor-DBH2B5z_.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
   </head>
   <body>
     <div id="app">
