deploy: a850c67e6c06c2bf0bdea85dc8079a8fad32a472

--- a/kastor.html
+++ b/kastor.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor-DBH2B5z_.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
+    <script type="module" crossorigin src="./assets/kastor-CIO84F3z.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
   </head>
   <body>
     <div id="app">
