--- a/affinity.html
+++ b/affinity.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-C9HXj7xW.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
+    <script type="module" crossorigin src="./assets/affinity-Bc-_FEcK.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
