--- a/ddm9.html
+++ b/ddm9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/ddm9-BOCgnx3R.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
+    <script type="module" crossorigin src="./assets/ddm9-B2G9OcAS.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
