--- a/equilibrium.html
+++ b/equilibrium.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/equilibrium-CxXLVArT.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper--OEO6foh.js">
+    <script type="module" crossorigin src="./assets/equilibrium-D11XduID.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
   </head>
   <body>
     <div id="app">
