--- a/kp-19.html
+++ b/kp-19.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-DmTkqzyE.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-DcuFeSnb.js">
+    <script type="module" crossorigin src="./assets/kp-19-C88kJ5l9.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
   </head>
   <body>
     <div id="app">
