--- a/3dkeycaps.html
+++ b/3dkeycaps.html
@@ -33,7 +33,7 @@
         <a target="_blank" href="https://make.dmm.com/market/item/1009976/">DMM.make さま</a> にデータを預けてあるので、高品質な 3D プリントを利用できます。
       </p>
       <p>
-        Influenced by: -
+        Influenced by: Dactyl, Colosseum, Lime40
       </p>
       <p>
         <a href="./index.html">＜ Back</a>
