deploy: 6cb01a60ce602793d0c56e1023775814096b3fc0

--- a/affinity.html
+++ b/affinity.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-Bc-_FEcK.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
+    <script type="module" crossorigin src="./assets/affinity-kZuPVj4k.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
