--- a/composition.html
+++ b/composition.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/composition-B-pUsOve.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BEHOdogD.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DQWREDYT.js">
+    <script type="module" crossorigin src="./assets/composition-CmTkQiom.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
   </head>
   <body>
     <div id="app">
