deploy: d6708752c238800c31fae974e24df0e8de7f5fc3

--- a/disco9.html
+++ b/disco9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/disco9-D8Fh-91m.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
+    <script type="module" crossorigin src="./assets/disco9-RnuHwq82.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
   </head>
   <body>
     <div id="app">
