--- a/kastor2.html
+++ b/kastor2.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kastor2-C-L3zShG.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
+    <script type="module" crossorigin src="./assets/kastor2-Cr1_YYer.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
   </head>
   <body>
     <div id="app">
