--- a/hifumi.html
+++ b/hifumi.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/hifumi-tp-9psLE.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
+    <script type="module" crossorigin src="./assets/hifumi-AmlJIkGu.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
   </head>
   <body>
     <div id="app">
