--- a/kp-19.html
+++ b/kp-19.html
@@ -14,8 +14,8 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/kp-19-DVIip9kh.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
+    <script type="module" crossorigin src="./assets/kp-19-BdP0BAz_.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
   </head>
   <body>
     <div id="app">
