--- a/switch42.html
+++ b/switch42.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/switch42-DHCTHkNd.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-BL64QJVa.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-DIAZpSxD.js">
+    <script type="module" crossorigin src="./assets/switch42-SypdjS7r.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
   </head>
   <body>
     <div id="app">
