deploy: e3686f9e84934e47c1d53766ebe70e935670fee1

--- a/affinity.html
+++ b/affinity.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/affinity-uDehJyYl.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
+    <script type="module" crossorigin src="./assets/affinity-BdpIm-Ws.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BbT-rapS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BRzbvSmC.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
