--- a/gemini.html
+++ b/gemini.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/gemini-B9qIa1U7.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
+    <script type="module" crossorigin src="./assets/gemini-BXcq2Kuh.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BbT-rapS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BRzbvSmC.js">
   </head>
   <body>
     <div id="app">
