--- a/morpho.html
+++ b/morpho.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/morpho-DgUEbf42.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
+    <script type="module" crossorigin src="./assets/morpho-Bdd_60dh.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BbT-rapS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BRzbvSmC.js">
   </head>
   <body>
     <div id="app">
