--- a/ddm9.html
+++ b/ddm9.html
@@ -14,9 +14,9 @@
   border: 1px solid #ccc;
 }
     </style>
-    <script type="module" crossorigin src="./assets/ddm9-DmCyqyxM.js"></script>
-    <link rel="modulepreload" crossorigin href="./assets/materials-WrihcwT6.js">
-    <link rel="modulepreload" crossorigin href="./assets/helper-BmzaJcLk.js">
+    <script type="module" crossorigin src="./assets/ddm9-DzV2m49i.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/materials-BbT-rapS.js">
+    <link rel="modulepreload" crossorigin href="./assets/helper-BRzbvSmC.js">
     <link rel="modulepreload" crossorigin href="./assets/constants-choc-DPCmzYXE.js">
   </head>
   <body>
